2007-06-22  Naba Kumar  <naba.kumar@gnome.org>

	* NEWS: Updated
	* configure.in: Bumped version to 0.7.6

	Patch from Halton Huo:
	* gdl/gdl-dock-item.c: (gdl_dock_item_expose), 
	gdl/gdl-dock-tablabel.c: (gdl_dock_tablabel_expose),
	gdl/gdl-tools.h: Bug #407393 – (void)0 will cause build fail on
	Sun cc

2007-06-22  Naba Kumar  <naba@gnome.org>

	* autogen.sh: Fixes bug 407400 – autogen.sh fails on Solaris find.

2007-05-07  Naba Kumar  <naba@gnome.org>

	Patch from  Cygwin Ports maintainer  <yselkowitz@users.sourceforge.net>:

	* configure.in: Add '-no-undefined' to EXTRA_LDFLAGS for all
	platforms.
	* gdl/Makefile.am: Link libgdl-gnome-1 against libgdl-1.
	* gdl-1.0.pc.in:
	* gdl-gnome-1.0.pc.in: Fixed dependencies.

=== gdl 0.7.5 ===

2007-05-06  Naba Kumar  <naba@gnome.org>
	
	* configure.in: Fixes build failure. Bumped version.
	* NEWS: Updated

=== gdl 0.7.4 ===

2007-05-06  Naba Kumar  <naba@gnome.org>

	* configure.in: Bumped version to 0.7.4
	* NEWS: Updated

	Patch from Halton Huo:
	* gdl/gdl-dock.c: Fixed __FUNCTION__ macro for sun.

2007-04-04  Naba Kumar  <naba@gnome.org>

	* gdl/gdl-dock-master.c: (gdl_dock_master_class_init),
	(gdl_dock_master_instance_init), (gdl_dock_master_set_property),
	(gdl_dock_master_get_property), (gdl_dock_master_add),
	(set_switcher_style_foreach), (gdl_dock_master_set_switcher_style):
	Added a properly 'switcher-style' that sets the global switcher
	style for all notebook items.
	
	* gdl/gdl-switcher.c: (layout_buttons),
	(gdl_switcher_set_property), (gdl_switcher_get_property),
	(gdl_switcher_class_init), (gdl_switcher_instance_init),
	(gdl_switcher_add_button), (set_switcher_style_internal),
	(style_changed_notify), (gdl_switcher_set_style),
	(gdl_switcher_get_style), gdl/gdl-switcher.h: Renamed 'mode' to
	'style' and added a GDL_SWITCHER_STYLE_TABS. Set/get style as
	property.
	
	* gdl/test-dock.c: (on_style_button_toggled),
	(create_style_button), (create_styles_item), (main): Added
	switcher style test code.
	